--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "photo-lab",
   "private": true,
   "type": "module",
   "scripts": {
@@ -20,18 +20,24 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@nuxtjs/cloudinary": "^2.7.3",
     "@nuxtjs/strapi": "^1.12.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
+    "@vee-validate/zod": "^4.12.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-vue-next": "^0.319.0",
+    "mongoose": "^8.3.1",
+    "nuxt-server-utils": "^0.0.7",
     "nuxt-swiper": "^1.2.2",
     "pinia": "^2.1.7",
     "radix-vue": "^1.3.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "vee-validate": "^4.12.6",
     "vue-sonner": "^1.1.2",
-    "vue3-icons": "^0.1.13"
+    "vue3-icons": "^0.1.13",
+    "zod": "^3.22.4"
   }
 }
