--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
-    "start": "nuxi start",
-    "dev": "nuxt dev",
+    "build": "nuxt build", 
+    "dev": "nuxt dev", 
+    "preview": "nuxt start",
+    "start": "node .output/server/index.mjs",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
