--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-vue-next": "^0.319.0",
+    "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "nuxt-server-utils": "^0.0.7",
     "nuxt-swiper": "^1.2.2",
