--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build", 
+    "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -24,7 +24,6 @@
     "@nuxtjs/strapi": "^1.12.0",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
-    "@vee-validate/zod": "^4.12.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-vue-next": "^0.319.0",
@@ -36,9 +35,6 @@
     "radix-vue": "^1.3.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "vee-validate": "^4.12.6",
-    "vue-sonner": "^1.1.2",
-    "vue3-icons": "^0.1.13",
-    "zod": "^3.22.4"
+    "vue-sonner": "^1.1.2"
   }
 }
