--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/tailwindcss": "^6.11.2",
     "@unlok-co/nuxt-stripe": "^2.0.0",
     "nuxt": "^3.9.3",
+    "nuxt-delay-hydration": "^1.3.3",
     "shadcn-nuxt": "^0.10.2",
     "typescript": "^5.3.3",
     "vue": "^3.4.14",
